Wrap Up Final Changes
